--- a/pls/pom.xml
+++ b/pls/pom.xml
@@ -41,7 +41,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.2.RELEASE</version>
+        <version>1.5.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -49,10 +49,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <spring.cloud.version>Camden.SR2</spring.cloud.version>
+        <spring.cloud.version>Dalston.SR3</spring.cloud.version>
         <flexjson.version>3.3</flexjson.version>
         <commons.lang3.version>3.5</commons.lang3.version>
         <docker.maven.version>0.4.3</docker.maven.version>
+        <maven-enforcer-plugin.version>3.0.0-M1</maven-enforcer-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -131,6 +132,47 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>${maven-enforcer-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>enforce-banned-dependencies</id>
+                        <goals>
+                            <goal>enforce</goal>
+                            <goal>display-info</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <bannedDependencies>
+                                    <excludes>
+                                        <exclude>de.codecentric:spring-boot-admin-sample-eureka:(,1.4.4]</exclude>
+                                        <exclude>com.fasterxml.jackson.core:jackson-databind:(,2.8.8]</exclude>
+                                        <exclude>org.apache.tomcat.embed:tomcat-embed-core:(,8.5.12]</exclude>
+                                        <exclude>org.apache.tomcat.embed:tomcat-embed-core:[9.0.0.M1,9.0.0.M18]</exclude>
+                                        <exclude>org.codehaus.jackson:jackson-mapper-asl:(,1.9.13]</exclude>
+                                        <exclude>org.drools:drools-core:(,6.2.0.Final)</exclude>
+                                        <exclude>org.openwms.configuration:(,1.0.0]</exclude>
+                                        <exclude>org.openwms:org.openwms.configuration:(,1.0.0]</exclude>
+                                        <exclude>org.openwms:org.openwms.services:(,1.0.0]</exclude>
+                                        <exclude>xerces:xercesImpl:(,2.11.0]</exclude>
+
+                                        <!--Banned dependencies that are found are commented -->
+                                        <!--<exclude>ch.qos.logback:logback-classic:(,1.1.11]</exclude>-->
+                                        <!--<exclude>com.thoughtworks.xstream:xstream:(,1.4.9]</exclude>-->
+                                        <!--<exclude>io.netty:netty-handler:(,4.1.1.Final)</exclude>-->
+                                        <!--<exclude>org.bouncycastle:bcprov-jdk15on:(,1.55]</exclude>-->
+                                    </excludes>
+                                </bannedDependencies>
+                                <dependencyConvergence/>
+                                <banDuplicatePomDependencyVersions/>
+                            </rules>
+                            <fail>true</fail>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>pl.project13.maven</groupId>
